2009-12-14  Chong Yidong  <cyd@stupidchicken.com>

	* Makefile.in: Revert last change (Bug#5191).

2009-12-14  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hg.el (vc-hg-print-log): Fix argument order.
	(vc-hg-working-revision): Make sure the command is executed in a
	known environment so that we can parse the output.  (Bug#4417)

2009-12-14  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/python.el (python-symbol-completions): Remove text
	properties from symbol string before calling python-send-receive.

2009-12-14  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-mi.el (gdb-frame-handler): Only set gud-lat-frame
	when there are values for both file and line. (Bug#5060)

2009-12-14  Juri Linkov  <juri@jurta.org>

	* ediff-ptch.el (ediff-context-diff-label-regexp): Don't match
	whitespace after the file name of the first line of unified format,
	because git-diff doesn't output whitespace and file modification time
	after the file name.

2009-12-14  David Kastrup  <dak@gnu.org>

	* info.el (Info-hide-cookies-node): Before hiding a cookie,
	check if it already has the `display' property added by
	`Info-display-images-node', and not put the `invisible' property
	in this case.

2009-12-14  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/semantic/mru-bookmark.el (global-semantic-mru-bookmark-mode)
	(semantic-mru-bookmark-mode): Doc fixes.

	* cedet/semantic/db.el (semanticdb-cache-get): Use error instead
	of assert.

2009-12-13  Glenn Morris  <rgm@gnu.org>

	* mail/emacsbug.el (message-sort-headers): Define for compiler.
	(report-emacs-bug): In message-mode, sort manually before storing
	original report text.  (Bug#5178)
	Remove superfluous save-excursion.

2009-12-12  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-property-handler): Filter lambda forms out
	when responding to "GetAll" properties.

2009-12-12  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (compose-mail): Remove mail-setup-with-from from
	customization checks.
